# iree-nvgpu

./: .bazel_to_cmake.cfg.py  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  README.md  iree_compiler_plugin_group.cmake  sync_deps.py
compiler/src/: CMakeLists.txt  lit.cfg.py
compiler/src/openxla/compiler/async/: BUILD.bazel  CMakeLists.txt  PluginRegistration.cpp
compiler/src/openxla/compiler/async/Dialect/: CMakeLists.txt
compiler/src/openxla/compiler/async/Dialect/Async/: CMakeLists.txt
compiler/src/openxla/compiler/async/Dialect/Async/Conversion/: BUILD.bazel  CMakeLists.txt  ConvertAsyncToRuntime.cpp  ConvertAsyncToRuntime.h
compiler/src/openxla/compiler/async/Dialect/Async/IR/: Async.cpp  Async.h  AsyncDialect.td  AsyncOps.td  AsyncTypes.td  BUILD.bazel  CMakeLists.txt
compiler/src/openxla/compiler/async/Dialect/Async/Transforms/: AsyncToAsyncRuntime.cpp  BUILD.bazel  CMakeLists.txt  Passes.h  Passes.td
compiler/src/openxla/compiler/nvgpu/: BUILD.bazel  CMakeLists.txt  PluginRegistration.cpp
compiler/src/openxla/compiler/nvgpu/Conversion/: BUILD.bazel  CMakeLists.txt  ConvertHLOToCUDNN.cpp  ConvertHLOToCUDNN.h
compiler/src/openxla/compiler/nvgpu/Dialect/: CMakeLists.txt
compiler/src/openxla/compiler/nvgpu/Dialect/CUBLAS/: CMakeLists.txt
compiler/src/openxla/compiler/nvgpu/Dialect/CUBLAS/IR/: BUILD.bazel  CMakeLists.txt  CUBLASDialect.cpp  CUBLASDialect.h  CUBLASDialect.td  CUBLASOps.cpp  CUBLASOps.h  CUBLASOps.td  CUBLASTypes.cpp  CUBLASTypes.h  CUBLASTypes.td
compiler/src/openxla/compiler/nvgpu/Dialect/CUDNN/: CMakeLists.txt
compiler/src/openxla/compiler/nvgpu/Dialect/CUDNN/Conversion/: BUILD.bazel  CMakeLists.txt  ConvertCUDNNToRuntime.cpp  ConvertCuDNNToRuntime.cpp  ConvertCuDNNToRuntime.h
compiler/src/openxla/compiler/nvgpu/Dialect/CUDNN/IR/: BUILD.bazel  CMakeLists.txt  CUDNNDialect.cpp  CUDNNDialect.h  CUDNNDialect.td  CUDNNOps.cpp  CUDNNOps.h  CUDNNOps.td  CUDNNTypes.cpp  CUDNNTypes.h  CUDNNTypes.td
compiler/src/openxla/compiler/nvgpu/Dialect/CUDNN/Transforms/: BUILD.bazel  CMakeLists.txt  ConvertCUDNNToRuntime.cpp  ConvertCUDNNToRuntime.h  ConvertCuDNNToRuntime.cpp  ExpandCUDNNOperations.cpp  NormalizeHLOConvolutionLayouts.cpp  PassDetail.h  Passes.h  Passes.td
compiler/src/openxla/compiler/nvgpu/Dialect/FlowTransformExtension/: CMakeLists.txt
compiler/src/openxla/compiler/nvgpu/Dialect/FlowTransformExtension/IR/: BUILD.bazel  CMakeLists.txt  FlowTransformExtension.cpp  FlowTransformExtension.h  FlowTransformExtension.td
compiler/src/openxla/compiler/nvgpu/Dialect/Triton/: CMakeLists.txt
compiler/src/openxla/compiler/nvgpu/Dialect/Triton/Conversion/: BUILD.bazel  CMakeLists.txt  ConvertTritonToCustomDispatch.cpp  ConvertTritonToCustomDispatch.h  ConvertTritonToFlowDispatch.cpp  ConvertTritonToFlowDispatch.h
compiler/src/openxla/compiler/nvgpu/Dialect/Triton/IR/: BUILD.bazel  CMakeLists.txt  TritonDialect.cpp  TritonDialect.h  TritonDialect.td  TritonOps.cpp  TritonOps.h  TritonOps.td
compiler/src/openxla/compiler/nvgpu/Dialect/Triton/Transforms/: BUILD.bazel  CMakeLists.txt  ConvertTritonToCustomDispatch.cpp  ConvertTritonToFlowDispatch.cpp  PassDetail.h  Passes.cpp  Passes.h  Passes.td
compiler/src/openxla/compiler/nvgpu/Dialect/TritonFlow/: BUILD.bazel  CMakeLists.txt
compiler/src/openxla/compiler/nvgpu/Dialect/TritonFlow/Conversion/: BUILD.bazel  CMakeLists.txt  ConvertHloToTriton.cpp  (+3 more)
compiler/src/openxla/compiler/nvgpu/Transforms/: BUILD.bazel  CMakeLists.txt  ConvertHLOToCUDNN.cpp  ConvertMHLOToCUDNN.cpp  FlowTransformInterpreter.cpp  NormalizeHLOConvolutionLayouts.cpp  Passes.h  Passes.td  Sample.cpp
compiler/src/openxla/compiler/nvgpu/Transforms/test/: BUILD.bazel  CMakeLists.txt  example.mlir  hlo_to_cudnn.mlir  normalize_hlo_convolution_layouts.mlir  transform_interpreter_dispatch_reductions.mlir  transform_interpreter_matmul_pad_split_k.mlir
compiler/src/openxla/compiler/nvgpu/test/: CMakeLists.txt  example.mlir
runtime/src/: CMakeLists.txt
runtime/src/openxla/runtime/async/: CMakeLists.txt  async_runtime.c  async_runtime.h  async_runtime_util.h  exports.inl  module.c  module.h  module_test.cpp  tsl_async_value.cpp  tsl_async_value.h
runtime/src/openxla/runtime/async/async_test/: CMakeLists.txt  module.cpp  module.h  module_test.mlir
runtime/src/openxla/runtime/nvgpu/: CMakeLists.txt  cudnn_api.cpp  cudnn_api.h  cudnn_headers.h  cudnn_module.cpp  cudnn_module.h  cudnn_stub.cpp  cudnn_stub.h  cudnn_stub.h.inc  dynamic_symbol_tables.h  dynamic_symbols.c  dynamic_symbols.h  status_util.c  status_util.h
runtime/src/openxla/runtime/nvgpu/benchmark/: CMakeLists.txt  conv2d_add_bias_cudnn.mlir  conv2d_add_bias_mhlo.mlir
runtime/src/openxla/runtime/nvgpu/cudnn/: CMakeLists.txt  cudnn_api.cpp  cudnn_api.h  cudnn_headers.h  cudnn_module.cpp  cudnn_module.h  cudnn_stub.cpp  cudnn_stub.h  cudnn_stub.h.inc  dynamic_symbol_tables.h  dynamic_symbols.c  dynamic_symbols.h  status_util.c  status_util.h
runtime/src/openxla/runtime/nvgpu/cudnn/benchmark/: conv2d_add_bias_cudnn.mlir  conv2d_add_bias_mhlo.mlir
runtime/src/openxla/runtime/nvgpu/cudnn/test/: CMakeLists.txt  conv2d.mlir  conv2d_1x1_add_bias.mlir  conv2d_3x3_add_bias.mlir  conv2d_add_bias.mlir  conv2d_batch_norm.mlir  conv2d_batch_norm_add_max.mlir  conv2d_batch_norm_expanded.mlir  conv2d_freduce.mlir  conv2d_relu.mlir  e2e_conv2d.mlir  e2e_resnet50_fake_weights.mlir  e2e_resnet50_subset.mlir
runtime/src/openxla/runtime/nvgpu/test/: CMakeLists.txt  conv2d.mlir  conv2d_add_bias.mlir  conv2d_batch_norm.mlir  conv2d_batch_norm_add_max.mlir  conv2d_batch_norm_expanded.mlir  example.mlir
runtime/src/openxla/runtime/nvgpu/test/python/: conv2d_test.py
runtime/src/openxla/runtime/nvgpu/triton/: CMakeLists.txt
runtime/src/openxla/runtime/nvgpu/triton/test/: CMakeLists.txt  add.mlir  emit_triton_bytecode.mlir  triton_add.mlir  triton_add_bytecode.mlir  triton_add_inplace.mlir  triton_add_inplace_bytecode.mlir  triton_add_kernel.mlir  triton_custom_call.mlir  triton_custom_call_add.mlir  triton_custom_call_add_inplace.mlir
(+75 files in other folders)
