# Copyright 2023 The OpenXLA Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

set(IREE_PACKAGE_ROOT_DIR "${CMAKE_CURRENT_LIST_DIR}")
set(IREE_PACKAGE_ROOT_PREFIX "")
set(IREE_COMPILER_TABLEGEN_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}")

if(OPENXLA_NVGPU_BUILD_RUNTIME_CUDNN)
  add_subdirectory(openxla/runtime/nvgpu/cudnn)
endif()

if(OPENXLA_NVGPU_BUILD_RUNTIME_TRITON)
  add_subdirectory(openxla/runtime/nvgpu/triton)
endif()

if(OPENXLA_ASYNC_BUILD_RUNTIME)
  add_subdirectory(openxla/runtime/async)
endif()
