# Copyright 2023 The OpenXLA Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("@iree_core//build_tools/bazel:build_defs.oss.bzl", "iree_compiler_register_plugin")

package(
    default_visibility = ["//visibility:public"],
    features = ["layering_check"],
    licenses = ["notice"],  # Apache 2.0
)

cc_library(
    name = "defs",
    includes = ["../../.."],
)

cc_library(
    name = "registration",
    srcs = [
        "PluginRegistration.cpp",
    ],
    deps = [
        ":defs",
        "//compiler/src/openxla/compiler/nvgpu/Dialect/CUBLAS/IR",
        "//compiler/src/openxla/compiler/nvgpu/Dialect/CUDNN/IR",
        "//compiler/src/openxla/compiler/nvgpu/Dialect/CUDNN/Transforms",
        "//compiler/src/openxla/compiler/nvgpu/Dialect/TritonFlow/IR",
        "//compiler/src/openxla/compiler/nvgpu/Dialect/TritonFlow/Transforms",
        "//compiler/src/openxla/compiler/nvgpu/Transforms",
        "@iree_core//compiler/src/iree/compiler/PluginAPI",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Pass",
    ],
)

iree_compiler_register_plugin(
    plugin_id = "openxla_nvgpu",
    target = ":registration",
)
